--- a/config/i3/config
+++ b/config/i3/config
@@ -50,7 +50,7 @@ mode "$mode_system" {
 font pango:DejaVu Sans Mono 10
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
-default_border pixel 1
+default_border pixel 2
 default_floating_border normal
 
 # Hide borders
@@ -58,7 +58,7 @@ hide_edge_borders none
 
 # change borders
 bindsym $mod+u border none
-bindsym $mod+y border pixel 1
+bindsym $mod+y border pixel 2
 bindsym $mod+n border normal
 
 # Smart borders (draw borders around container only if it is not the only container on this workspace) 
@@ -72,17 +72,21 @@ smart_gaps on
 
 # Set inner/outer gaps
 gaps inner 14
-gaps outer -2
+gaps outer -7
 
 # Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
-set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps Gaps: (o) outer, (i) inner, (n)one, (g)aps
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
-bindsym $mod+Shift+g mode "$mode_gaps"
+bindsym $mod+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
         bindsym o      mode "$mode_gaps_outer"
         bindsym i      mode "$mode_gaps_inner"
+        bindsym g      gaps inner current set 14; gaps outer current set -7
+        bindsym $mod+g gaps inner current set 14; gaps outer current set -7; mode "default"
+        bindsym n      gaps inner current set 0; gaps outer current set 0
+        bindsym $mod+n gaps inner current set 0; gaps outer current set 0; mode "default"
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
@@ -219,6 +223,7 @@ bindsym $mod+Return exec kitty
 
 # start dmenu (a program launcher)
 bindsym $mod+space exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -297,8 +302,8 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split orientation
-bindsym $mod+c split h;exec notify-send 'tile horizontally';
 bindsym $mod+v split v;exec notify-send 'tile vertically';
+bindsym $mod+Shift+v split h;exec notify-send 'tile horizontally';
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -321,7 +326,7 @@ bindsym $mod+Ctrl+f focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+#bindsym $mod+c focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -449,7 +454,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # The middle button over a titlebar kills the window
-bindsym --release button2 kill
+bindsym button2 kill
 
 # The middle button and a modifer over any part of the window kills the window
 bindsym --whole-window $mod+button2 kill
